[workspace]
members = [
    "node",
    "node/consensus",
    "node/bitcoin_utxo_tracker",
    "node/randomx",
    "pallets/bitcoin_locks",
    "pallets/bitcoin_utxos",
    "pallets/block_rewards",
    "pallets/block_seal",
    "pallets/block_seal_spec",
    "pallets/domains",
    "pallets/digests",
    "pallets/chain_transfer",
    "pallets/fee_control",
    "pallets/treasury",
    "pallets/mining_slot",
    "pallets/notaries",
    "pallets/notebook",
    "pallets/price_index",
    "pallets/inbound_transfer_log",
    "pallets/operational_accounts",
    "pallets/pallet_prelude",
    "pallets/ticks",
    "pallets/mint",
    "pallets/vaults",
    "client",
    "end-to-end",
    "localchain",
    "localchain/uniffi-bindgen",
    "primitives",
    "runtime/argon",
    "runtime/canary",
    'runtime/common',
    "notary",
    "notary/audit",
    "notary/apis",
    "testing",
    "testing/bitcoin",
    "oracle",
    "bitcoin",
    "bitcoin/cli",
    "bitcoin/cli/macros",
    "bitcoin/nodejs",
    "runtime/common",
]
resolver = "2"


[workspace.package]
version = "1.4.0"
edition = "2024"
authors = ["Argon <https://github.com/argonprotocol>"]
description = "The Argon ecosystem is a stablecoin on top of bitcoin."
homepage = "https://argonprotocol.org"
license = "MIT-0"
rust-version = "1.88.0"
repository = "https://github.com/argonprotocol/mainchain"
documentation = "https://argonprotocol.org/docs"

[profile.release]
lto = true

[profile.production]
inherits = "release"

[profile.dev]
debug = 1
opt-level = 1
split-debuginfo = "packed"

# COPIED FROM SUBSTRATE REPO
#
# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3, debug = false }
libsecp256k1 = { opt-level = 3, debug = false }
libz-sys = { opt-level = 3, debug = false }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3, debug = false }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3, debug = false }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
sqlx-macros = { opt-level = 3, debug = false }

[workspace.lints.clippy]

[workspace.dependencies]
futures = { version = "0.3" }
futures-timer = "3.0.1"
parking_lot = { version = "0.12" }
async-trait = { version = "0.1" }
tokio = { version = "1.44", features = ["sync", "time", "rt"] }
schnellru = { version = "0.2" }
lru-cache = { version = "0.1.2" }
getrandom = { version = "0.3.2" }
rand = { version = "0.9.1" }
lazy_static = "1.4.0"
smallvec = { version = "1.13" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
url = { version = "2.5.0", default-features = false }
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json"], default-features = false }
scraper = { version = "0.24.0" }

codec = { default-features = false, package = "parity-scale-codec", version = "3.7", features = ["derive", "max-encoded-len"] }
serde = { default-features = false, version = "1.0", features = ["derive"] }
serde_json = { default-features = false, version = "1.0", features = ["raw_value", "arbitrary_precision", "alloc"] }
scale-info = { default-features = false, version = "2.11", features = ["derive"] }

anyhow = { version = "1", default-features = false }
thiserror = { version = "2.0.3", default-features = false }

jsonrpsee = { version = "0.24", features = ["http-client", "ws-client", "macros", "client-ws-transport-tls"] }
tower = { version = "0.4" }
tower-http = { version = "0.6" }
prometheus = { version = "0.13", default-features = false }
governor = { version = "0.10.0" }
rusoto_core = { version = "0.48" }
rusoto_s3 = { version = "0.48" }
rusoto_credential = { version = "0.48" }
axum = { version = "0.8.3" }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = { version = "0.4", default-features = false }
env_logger = "0.11"
humantime = { version = "2.1" }
color-backtrace = { version = "0.7" }
uuid = { version = "1.11.0" }

sqlx = { version = "0.8.5" }
chrono = { version = "0.4", features = ["serde"] }

polkadot-sdk = { version = "=2512.1.0", default-features = false }
# substrate crates needing extra features
substrate-wasm-builder = { version = "31.1.0", default-features = false }
sp-application-crypto = { version = "44.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-debug-derive = { version = "14.0.0", default-features = false }
frame-benchmarking = { version = "45.0.2", default-features = false }
sc-cli = { version = "0.57.0", default-features = false, features = ["rocksdb"] }
rocksdb = { version = "0.24.0", default-features = false, features = ["snappy", "bindgen-runtime"] }

finality-grandpa = { version = "0.16.3", default-features = false }

# test clients
fs2 = { version = "0.4" }
strip-ansi-escapes = { version = "0.2" }
current_platform = { version = "0.2" }
regex = { version = "1.11.1" }
serial_test = { version = "3.2.0" }

# node
impl-trait-for-tuples = "0.2.2"

rsntp = { version = "4.0" }

bitcoincore-rpc = { version = "0.19" }
minreq = { version = "2.7.0", features = ["https", "json-using-serde"] }
bitcoin = { version = "0.32.0", default-features = false }
bip39 = { version = "2.0.0", default-features = false }
miniscript = { version = "12.0.0", default-features = false }
hwi = { version = "0.10", default-features = false }
bitcoind = { version = "0.36.1", features = ["26_0"] }
age = { version = "0.10.0" }
k256 = { version = "0.13.3", default-features = false }
bip32 = { version = "0.5.1", default-features = false }
base58 = { version = "0.2.0", default-features = false }
base64 = { version = "0.22", default-features = false }
md-5 = { version = "0.10" }
napi-derive = { version = "2.16" }
napi = { version = "2.16", features = ["napi9", "async", "error_anyhow"] }
napi-build = { version = "2.1" }
wasm-bindgen = { version = "0.2", default-features = false }
console_error_panic_hook = { version = "0.1", default-features = false }
uniffi = { version = "0.29", features = ["tokio"] }
randomx-rs = { git = "https://github.com/argonprotocol/randomx-rs", branch = "main" }

clap = { version = "4.5", features = ["derive", "cargo", "env"] }
quote = { version = "1.0" }
inquire = { version = "0.9" }
rpassword = { version = "7.3" }
comfy-table = { version = "7.1" }
bech32 = { version = "0.11.0" }
array-bytes = { version = "9.3.0" }
directories = { version = "6.0" }
syn = { version = "2.0" }

bindgen = { version = "0.71" }
cmake = { version = "0.1" }

dotenv = { version = "0.15" }

# hyperprocessor bridge
pallet-ismp = { version = "2512.0.0", default-features = false }
pallet-ismp-runtime-api = { version = "2512.0.0", default-features = false }
pallet-hyperbridge = { version = "2512.0.0", default-features = false }
pallet-token-gateway = { version = "2512.0.0", default-features = false }
pallet-ismp-rpc = { version = "2512.0.0", default-features = false }
ismp-grandpa = { version = "2512.0.0", default-features = false }
ismp = { version = "2512.0.0", default-features = false }

ethers = { version = "2.0.14" }
uniswap-sdk-core = { version = "5.3.0" }
uniswap-v3-sdk = { version = "5.2.1", default-features = false }
uniswap-lens = { version = "0.15.0" }
alloy-primitives = { version = "1.3", default-features = false }
alloy-sol-types = { version = "1.5", default-features = false }
alloy-provider = { version = "1.0.42" }
alloy-transport = { version = "1.0.42" }
alloy-eips = { version = "1.0.42" }

subxt = { version = "0.44.2" }

argon-testing = { path = "testing" }
argon-localchain = { path = "localchain" }
argon-client = { path = "client" }
argon-node-consensus = { path = "node/consensus" }
argon-bitcoin = { path = "bitcoin", default-features = false }
argon-bitcoin-utxo-tracker = { path = "node/bitcoin_utxo_tracker" }
argon-node = { path = "node" }
argon-runtime = { path = "runtime/argon", default-features = false }
argon-canary-runtime = { path = "runtime/canary", default-features = false }
argon-runtime-common = { path = "runtime/common", default-features = false }
argon-randomx = { path = "node/randomx" }
argon-notary = { path = "notary" }
argon-notary-apis = { path = "notary/apis" }
argon-notary-audit = { path = "notary/audit", default-features = false }
argon-primitives = { path = "primitives", default-features = false }
argon-bitcoin-cli-macros = { path = "bitcoin/cli/macros" }

pallet-block-seal = { path = "pallets/block_seal", default-features = false }
pallet-block-seal-spec = { path = "pallets/block_seal_spec", default-features = false }
pallet-bitcoin-locks = { path = "pallets/bitcoin_locks", default-features = false }
pallet-bitcoin-utxos = { path = "pallets/bitcoin_utxos", default-features = false }
pallet-block-rewards = { path = "pallets/block_rewards", default-features = false }
pallet-chain-transfer = { path = "pallets/chain_transfer", default-features = false }
pallet-digests = { path = "pallets/digests", default-features = false }
pallet-domains = { path = "pallets/domains", default-features = false }
pallet-fee-control = { path = "pallets/fee_control", default-features = false }
pallet-treasury = { path = "pallets/treasury", default-features = false }
pallet-mining-slot = { path = "pallets/mining_slot", default-features = false }
pallet-notebook = { path = "pallets/notebook", default-features = false }
pallet-notaries = { path = "pallets/notaries", default-features = false }
pallet-ticks = { path = "pallets/ticks", default-features = false }
pallet-mint = { path = "pallets/mint", default-features = false }
pallet-price-index = { path = "pallets/price_index", default-features = false }
pallet-inbound-transfer-log = { path = "pallets/inbound_transfer_log", default-features = false }
pallet-operational-accounts = { path = "pallets/operational_accounts", default-features = false }
pallet-prelude = { path = "pallets/pallet_prelude", default-features = false }
pallet-vaults = { path = "pallets/vaults", default-features = false }
