[package]
name = "argon-bitcoin"
description = "Modules for creating an unlocking timeline scripts for bitcoin vaults"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
thiserror = { workspace = true, optional = true }
codec = { workspace = true, default-features = false }

sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
bitcoin = { workspace = true, default-features = false }
miniscript = { workspace = true, default-features = false, features = ["compiler", "no-std"] }
k256 = { workspace = true, features = ["alloc", "ecdsa"], default-features = false }
bitcoincore-rpc = { workspace = true, optional = true }

anyhow = { workspace = true, optional = true }

parking_lot = { workspace = true, optional = true }
hwi = { workspace = true, optional = true }

argon-primitives = { workspace = true, default-features = false, features = ["bitcoin"] }
log = { workspace = true }

[dev-dependencies]
frame-support = { workspace = true }
sp-keyring = { workspace = true }
argon-testing = { workspace = true }
bitcoind = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true, features = ["base64"] }
serde_json = { workspace = true }

[features]
default = [ "std" ]
std = [
	"anyhow/std",
	"argon-primitives/bitcoin",
	"argon-primitives/std",
	"bitcoin/std",
	"bitcoincore-rpc/default",
	"codec/std",
	"k256/std",
	"log/std",
	"miniscript/std",
	"parking_lot/default",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"thiserror",
]
hwi = [ "dep:hwi" ]
