[package]
name = "argon-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { workspace = true }
async-trait = { workspace = true }
codec = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["default"] }
serde_json = { workspace = true, features = ["default"] }
scale-info = { workspace = true, features = ["default"] }
thiserror = { workspace = true, features = ["default"] }
subxt = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "ws-client", "macros", "client-ws-transport-tls"] } # needs to be in sync with subxt
tracing = { workspace = true, features = ["default"] }
tracing-subscriber = { workspace = true }
polkadot-sdk = { workspace = true }
argon-primitives = { workspace = true, features = ["default"] }
anyhow = { workspace = true, features = ["default"] }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
argon-testing = { workspace = true }
