[package]
name = "end-to-end"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false


[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
bitcoind = { workspace = true }
miniscript = { workspace = true }
rand = { workspace = true }
bitcoin = { workspace = true, features = ["base64"] }
lazy_static = { workspace = true }
argon-client = { workspace = true }
argon-testing = { workspace = true }
argon-primitives = { workspace = true, features = ["default"] }
argon-bitcoin-utxo-tracker = { workspace = true }
argon-bitcoin = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
polkadot-sdk = { workspace = true, features = ["sp-arithmetic", "sp-core", "sp-keyring"], default-features = true }
subxt = { workspace = true }
serial_test = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
