[package]
name = "argon-localchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
documentation.workspace = true
exclude = ["/npm", "/__test__", "package.*", "*.js", "tsconfig*", "/node_modules"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
napi = { optional = true, workspace = true }
napi-derive = { optional = true, workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
codec = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["default"] }
serde_json = { workspace = true, features = ["default"] }
scale-info = { workspace = true, features = ["default"] }
thiserror = { workspace = true }
subxt = { workspace = true, features = ["default"] }
tokio = { workspace = true }
hex = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default", "serde"] }
binary-merkle-tree = { workspace = true, features = ["default"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
lazy_static = { workspace = true }
bech32 = { workspace = true }
array-bytes = { workspace = true }
directories = { workspace = true }
rpassword = { workspace = true }
argon-client = { workspace = true }
argon-primitives = { workspace = true, features = ["default"] }
argon-notary-apis = { workspace = true }
argon-notary-audit = { workspace = true, features = ["default"] }
uniffi = { workspace = true, optional = true }
jsonrpsee = { workspace = true }


[dev-dependencies]
frame-support = { workspace = true }
sp-keyring = { workspace = true }
argon-testing = { workspace = true }
sc-utils = { workspace = true }
argon-notary = { workspace = true }
subxt-signer = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
dotenv = { workspace = true }
uniffi = { workspace = true, features = ["build"] }

[features]
default = []
napi = [ "argon-primitives/napi", "dep:napi", "napi-derive" ]
uniffi = [ "argon-primitives/uniffi", "dep:uniffi" ]
