[package]
name = "ulx-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
num_cpus = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
codec = { workspace = true }
async-trait = { workspace = true }
futures-timer = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
prometheus-endpoint = { workspace = true }
sc-cli = { workspace = true }
sp-core = { workspace = true, features = ["default"] }
sc-executor = { workspace = true, features = ["default"] }
sc-network = { workspace = true, features = ["default"] }
sc-consensus-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["default"] }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-offchain = { workspace = true }
sc-consensus = { workspace = true }
sp-consensus = { workspace = true }
sc-client-api = { workspace = true }
sp-runtime = { workspace = true, features = ["default"] }
sp-arithmetic = { workspace = true, features = ["default"] }
sp-statement-store = { workspace = true, features = ["default"] }
sp-io = { workspace = true, features = ["default"] }
sp-timestamp = { workspace = true, features = ["default"] }
sp-inherents = { workspace = true, features = ["default"] }
sp-keystore = { workspace = true, features = ["default"] }
sp-keyring = { workspace = true, features = ["default"] }
frame-system = { workspace = true, features = ["default"] }
pallet-transaction-payment = { workspace = true, features = ["default"] }

jsonrpsee = { workspace = true, features = ["server"] }
sp-api = { workspace = true, features = ["default"] }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sp-blockchain = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sp-block-builder = { workspace = true, features = ["default"] }
sc-basic-authorship = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
serde_json = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

rand = { workspace = true }

# Local Dependencies
ulx-node-consensus = { workspace = true }
ulx-node-runtime = { workspace = true, features = ["default"] }
ulx-primitives = { workspace = true, features = ["default"] }

# CLI-specific dependencies
try-runtime-cli = { workspace = true, optional = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
    "ulx-node-runtime/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["ulx-node-runtime/try-runtime", "try-runtime-cli/try-runtime"]
fast-runtime = ["ulx-node-runtime/fast-runtime", "ulx-primitives/fast-runtime"]