[package]
name = "argon-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
num_cpus = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
codec = { workspace = true }
log = { workspace = true }
hex-literal = { workspace = true }
sc-cli = { workspace = true }
rocksdb = { workspace = true }

polkadot-sdk.workspace = true

polkadot-sdk.default-features = true

polkadot-sdk.features = [
    "substrate-prometheus-endpoint",
    "sc-cli",
    "sp-core",
    "sc-executor",
    "sc-network",
    "sc-consensus-grandpa",
    "sp-consensus-grandpa",
    "sc-service",
    "sc-telemetry",
    "sc-transaction-pool",
    "sc-transaction-pool-api",
    "sc-offchain",
    "sc-consensus",
    "sp-consensus",
    "sc-client-api",
    "sc-chain-spec",
    "sc-rpc-spec-v2",
    "sp-runtime",
    "sp-arithmetic",
    "sp-statement-store",
    "sp-io",
    "sp-timestamp",
    "sp-inherents",
    "sp-keystore",
    "sp-keyring",
    "frame-system",
    "pallet-transaction-payment",
    "sp-api",
    "sc-rpc",
    "sc-rpc-api",
    "sp-blockchain",
    "sc-consensus-grandpa-rpc",
    "sp-block-builder",
    "sc-basic-authorship",
    "substrate-frame-rpc-system",
    "pallet-transaction-payment-rpc",
]

jsonrpsee = { workspace = true, features = ["server"] }
serde_json = { workspace = true }
color-backtrace = { workspace = true }

pallet-ismp-runtime-api = { workspace = true, features = ["default"] }
pallet-ismp-rpc = { workspace = true }

# Local Dependencies
argon-node-consensus = { workspace = true }
argon-runtime = { workspace = true, features = ["default"] }
argon-canary-runtime = { workspace = true, features = ["default"] }
argon-primitives = { workspace = true, features = ["default"] }
argon-bitcoin-utxo-tracker = { workspace = true }
argon-randomx = { workspace = true }

# CLI-specific dependencies
url = { workspace = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be built
runtime-benchmarks = [
	"argon-canary-runtime/runtime-benchmarks",
	"argon-primitives/runtime-benchmarks",
	"argon-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"argon-canary-runtime/try-runtime",
	"argon-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
