[package]
name = "argon-notary"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true, features = ["default"] }
futures = { workspace = true }
getrandom = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
codec = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["default"] }
serde_json = { workspace = true, features = ["default"] }
scale-info = { workspace = true, features = ["default"] }
thiserror = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
sp-runtime = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sc-utils = { workspace = true }
sp-keystore = { workspace = true, features = ["default"] }
binary-merkle-tree = { workspace = true, features = ["default"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
chrono = { workspace = true }
clap = { workspace = true }
tower = { workspace = true }

argon-client = { workspace = true }
argon-notary-audit = { workspace = true, features = ["default"] }
argon-primitives = { workspace = true, features = ["default"] }
argon-notary-apis = { workspace = true }
url = { workspace = true }

[dev-dependencies]
frame-support = { workspace = true }
sp-keyring = { workspace = true }
argon-testing = { workspace = true }
subxt-signer = { workspace = true }

[build-dependencies]
dotenv = { workspace = true }
